added profject images

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
 									<!-- <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a> -->
 									<div class="content">
 										<h2 class="major">About</h2>
-										<p style="text-align: justify">I am a full stack Jr. Web Developer who has recently completed the DevMountain Web Immersive Bootcamp in Phoenix, Arizona. Focusing on libraries and frameworks such as React, Redux, Javascript, PostgreSQL, NodeJS and more, I continue to learn and grow as I embark out into the professional web development world. 
-											<br /><br />I am currently a mentor at DevMountain where I continue to push myself and those around me to help improve the future of web development and design. </p>
+										<p style="text-align: justify">I am a full stack Jr. Web Developer who has recently completed the DevMountain Web Immersive Bootcamp in Phoenix, Arizona. Focusing on libraries and frameworks such as React, Redux, Javascript, PostgreSQL, NodeJS and more, I continue to learn and grow as I embark out into the professional web development world. I am currently a mentor at DevMountain where I continue to push myself and those around me to help improve the future of web development and design. 
+										<br />
+										<br />
+										In addition to writing code, I am passionate about learning and continuously growing in knowledge and understanding. This prompted me to learn eight different instruments and dabble in everything from morse code to photography. Prior to pursuing web development, I was a professional classical guitar instructor where I taught musicians of all skill levels and ages. 
+										</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -100,7 +103,7 @@
 							<section id="four" class="wrapper spotlight style3">
 								<h1 class="major" style="width:85%; margin:auto; margin-bottom:10px; padding-top:20px">Experience</h1>
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/main-qimg-18d801a88c5d4fefd289642da0d074d9.png" alt="" /></a>
 									<div class="content">
 											<h2 class="major">Nike.com Clone</h2>
 											<p style="text-align: justify"><b>Full featured responsive e-commerce</b> web application clone of the Nike.com.
@@ -115,9 +118,9 @@
 								
 								<section id="three" class="wrapper alt spotlight style2">
 									<div class="inner">
-										<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/phxFilter.JPG" alt="" /></a>
 										<div class="content">
-											<h2 class="major">Fret Finder</h2>
+											<h2 class="major">Fret Finder (UNDER CONSTRUCTION)</h2>
 											<p style="text-align: justify">Fret-Finder is a <b>full stack crowd-sourced social networking application</b> connecting guitar instructors with local students. Using Redux and Redux Promise Middleware to manage global state changes the web app features the creation of users, instructors, available schedules, reviews, and lessons. All of the data is stored in five normalized PostgreSQL tables utilizing one-to-one and one-to-many relationships. <br /><br /> Technologies used - React.JS, Redux, RESTful API, PostgreSQL, Node.JS, Express.JS Auth0, Sass</p>
 										<a href="https://github.com/austincallaghan/personal-project#adding-a-css-preprocessor-sass-less-etc" class="special">Learn more</a>
 									</div>
